<package>
  <name>kuka_lwr4_support_armhf</name>
  <version>0.2.0</version>
  <description>
    <p>
      ROS Industrial support for the KUKA LWR4+ (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for KUKA LWR4+ manipulators. This currently includes the base model
      only.
    </p>
    <p>
      Joint limits and maximum joint velocities are based on the information in
      the <em>Datasheet LightWeight Robot 4+ (LWR)</em>
      version <em>B-82754EN/09</em>. All urdfs are based on the default motion
      and joint velocity limits, unless noted otherwise (ie: no support for
      high speed joints, extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Risto Kojcev (Center for MicroBio Robotics, Italian Institute of Technology)</author>
  <maintainer email="rkojcev@gmail.com">Risto Kojcev (Center for MicroBio Robotics, Italian Institute of Technology)</maintainer>
  <license>BSD</license>

<!--   <url type="website">http://ros.org/wiki/fanuc_m10ia_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>fanuc_resources</run_depend>
<!--   <run_depend>fanuc_driver</run_depend> -->
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent />
  </export>
</package>